--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
       
       <h3>EIN PROJEKT VON</h3>
       <p><strong>Jugendpflege Kirkel</strong></p>
-      <p>Moritz Gessner</p>
+      <p>Moritz Gessner Armin Jung</p>
       
       <h3>TECHNISCHE UMSETZUNG</h3>
       <p><strong>2Rat Planungsbüro für Radverkehr</strong></p>
