--- a/datenschutz.html
+++ b/datenschutz.html
@@ -25,16 +25,24 @@
 <body>
   <h1>🔍 Datenschutzerklärung</h1>
   <h2 style="margin-top: 0;">Schulweg-Detektive App</h2>
-  <p class="updated">Stand: Januar 2026</p>
+  <p class="updated">Stand: Februar 2026</p>
 
   <h2>1. Verantwortlicher</h2>
   <p>
-    <strong>2Rat Planungsbüro für Radverkehr</strong><br>
+    <strong>Projektträger:</strong><br>
+    Jugendpflege der Gemeinde Kirkel<br>
+    Armin Jung<br>
+    Telefon: 06841-809860<br>
+    E-Mail: <a href="mailto:a.jung@kirkel.de">a.jung@kirkel.de</a>
+  </p>
+  <p>
+    <strong>Technische Umsetzung:</strong><br>
+    2Rat Planungsbüro für Radverkehr<br>
     Armin Jung<br>
     Ritter-von-Hagen-Straße 13<br>
     66822 Lebach<br><br>
     Telefon: 0151-29443794<br>
-    E-Mail: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="adcbccc5df9fdfccd9edcac0ccc4c183cec2c0">[email&#160;protected]</a><br>
+    E-Mail: <a href="mailto:fahr2rat@gmail.com">fahr2rat@gmail.com</a><br>
     Website: <a href="https://2rat.org">2rat.org</a>
   </p>
 
@@ -120,5 +128,15 @@
     <h2 style="margin-top: 0;">11. Kontakt</h2>
     <p>
       Bei Fragen zum Datenschutz wenden Sie sich bitte an:<br><br>
-      <strong>2Rat Planungsbüro für Radverkehr</strong><br>
- 
+      <strong>Jugendpflege der Gemeinde Kirkel</strong><br>
+      Armin Jung<br>
+      Telefon: 06841-809860<br>
+      E-Mail: <a href="mailto:a.jung@kirkel.de">a.jung@kirkel.de</a>
+    </p>
+  </div>
+  
+  <p style="margin-top: 30px; color: #666; font-size: 12px;">
+    Ein Gemeinschaftsprojekt von Jugendpflege der Gemeinde Kirkel und 2Rat Planungsbüro für Radverkehr.
+  </p>
+</body>
+</html>
