--- a/datenschutz.html
+++ b/datenschutz.html
@@ -6,137 +6,44 @@
   <title>Datenschutzerklärung - Schulweg-Detektive</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 600px;
       margin: 0 auto;
       padding: 20px;
       line-height: 1.6;
       color: #333;
     }
-    h1 { color: #f59e0b; }
-    h2 { color: #b45309; margin-top: 30px; }
-    .updated { color: #666; font-size: 14px; }
-    ul { margin: 10px 0; }
-    li { margin: 5px 0; }
-    .contact { background: #fef3c7; padding: 15px; border-radius: 8px; margin-top: 30px; }
+    h1 { color: #f59e0b; font-size: 24px; }
+    h2 { color: #b45309; font-size: 18px; margin-top: 24px; }
+    .contact { background: #fef3c7; padding: 16px; border-radius: 12px; margin: 20px 0; }
     a { color: #f59e0b; }
   </style>
 </head>
 <body>
   <h1>🔍 Datenschutzerklärung</h1>
-  <h2 style="margin-top: 0;">Schulweg-Detektive App</h2>
-  <p class="updated">Stand: Februar 2026</p>
-
-  <h2>1. Verantwortlicher</h2>
-  <p>
-    <strong>Projektträger:</strong><br>
-    Jugendpflege der Gemeinde Kirkel<br>
-    Armin Jung<br>
-    Telefon: 06841-809860<br>
-    E-Mail: <a href="mailto:a.jung@kirkel.de">a.jung@kirkel.de</a>
-  </p>
-  <p>
-    <strong>Technische Umsetzung:</strong><br>
-    2Rat Planungsbüro für Radverkehr<br>
-    Armin Jung<br>
-    Ritter-von-Hagen-Straße 13<br>
-    66822 Lebach<br><br>
-    Telefon: 0151-29443794<br>
-    E-Mail: <a href="mailto:fahr2rat@gmail.com">fahr2rat@gmail.com</a><br>
-    Website: <a href="https://2rat.org">2rat.org</a>
-  </p>
-
-  <h2>2. Welche Daten werden erfasst?</h2>
-  <p>Die App erfasst folgende Daten, wenn der Nutzer eine Meldung erstellt:</p>
-  <ul>
-    <li><strong>Standortdaten (GPS):</strong> Geografische Koordinaten der gemeldeten Stelle</li>
-    <li><strong>Kategorie:</strong> Art der Meldung (z.B. "Zu schnelle Autos", "Zebrastreifen")</li>
-    <li><strong>Zeitstempel:</strong> Datum und Uhrzeit der Meldung</li>
-    <li><strong>Freiwillige Angaben:</strong> Name, Klasse, Verkehrsmittel, Richtung (nur wenn vom Nutzer eingegeben)</li>
-  </ul>
-
-  <h2>3. Wo werden die Daten gespeichert?</h2>
-  <p>
-    <strong>Alle Daten werden ausschließlich lokal auf dem Gerät des Nutzers gespeichert.</strong>
-  </p>
-  <p>
-    Die App überträgt keine Daten an Server oder Dritte. Es findet keine Internetkommunikation statt, 
-    außer zum erstmaligen Laden der App.
-  </p>
-
-  <h2>4. Wie werden die Daten weitergegeben?</h2>
-  <p>
-    Die Weitergabe der gesammelten Daten erfolgt ausschließlich durch den Nutzer selbst:
-  </p>
-  <ul>
-    <li>Der Nutzer kann einen QR-Code generieren, der die Meldungen enthält</li>
-    <li>Dieser QR-Code kann freiwillig einer Lehrkraft gezeigt werden</li>
-    <li>Die Lehrkraft scannt den Code, um die Daten in ihren Bereich zu übernehmen</li>
-  </ul>
-  <p>
-    Ohne aktives Handeln des Nutzers verlassen keine Daten das Gerät.
-  </p>
-
-  <h2>5. Standortdaten (GPS)</h2>
-  <p>
-    Die App benötigt Zugriff auf den Gerätestandort, um die Position von Meldungen zu erfassen. 
-    Der Standortzugriff wird nur genutzt, wenn der Nutzer aktiv eine Meldung erstellt.
-  </p>
-  <p>
-    Der Nutzer kann den Standortzugriff jederzeit in den Geräteeinstellungen widerrufen. 
-    Ohne Standortzugriff können keine neuen Meldungen mit Position erstellt werden.
-  </p>
-
-  <h2>6. Daten löschen</h2>
-  <p>
-    Der Nutzer kann alle gespeicherten Daten jederzeit löschen:
-  </p>
-  <ul>
-    <li>In der App: Einzelne Meldungen oder alle Daten löschen</li>
-    <li>App deinstallieren: Alle Daten werden automatisch entfernt</li>
-    <li>Browser-Daten löschen: Entfernt alle App-Daten</li>
-  </ul>
-
-  <h2>7. Keine Registrierung</h2>
-  <p>
-    Die App erfordert keine Registrierung, kein Benutzerkonto und keine Anmeldung. 
-    Es werden keine E-Mail-Adressen oder Passwörter erfasst.
-  </p>
-
-  <h2>8. Keine Werbung, keine Tracker</h2>
-  <p>
-    Die App enthält keine Werbung und keine Analyse- oder Tracking-Tools. 
-    Es werden keine Nutzungsstatistiken erhoben.
-  </p>
-
-  <h2>9. Kinder als Nutzer</h2>
-  <p>
-    Die App richtet sich an Grundschulkinder im Rahmen von Schulprojekten zur Verkehrserziehung. 
-    Wir empfehlen, dass Kinder die App unter Aufsicht von Erziehungsberechtigten oder Lehrkräften nutzen.
-  </p>
-  <p>
-    Da alle Daten lokal bleiben und keine Daten übertragen werden, ist die Nutzung durch Kinder datenschutzrechtlich unbedenklich.
-  </p>
-
-  <h2>10. Änderungen dieser Datenschutzerklärung</h2>
-  <p>
-    Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen. 
-    Die aktuelle Version ist stets unter dieser URL abrufbar.
-  </p>
+  <p><strong>Schulweg-Detektive App</strong><br>Stand: Februar 2026</p>
 
   <div class="contact">
-    <h2 style="margin-top: 0;">11. Kontakt</h2>
-    <p>
-      Bei Fragen zum Datenschutz wenden Sie sich bitte an:<br><br>
-      <strong>Jugendpflege der Gemeinde Kirkel</strong><br>
-      Armin Jung<br>
-      Telefon: 06841-809860<br>
-      E-Mail: <a href="mailto:a.jung@kirkel.de">a.jung@kirkel.de</a>
-    </p>
+    <strong>Verantwortlich:</strong><br>
+    2Rat Planungsbüro für Radverkehr<br>
+    Armin Jung<br>
+    Ritter-von-Hagen-Straße 13, 66822 Lebach<br>
+    E-Mail: <a href="mailto:fahr2rat@gmail.com">fahr2rat@gmail.com</a>
   </div>
-  
-  <p style="margin-top: 30px; color: #666; font-size: 12px;">
-    Ein Gemeinschaftsprojekt von Jugendpflege der Gemeinde Kirkel und 2Rat Planungsbüro für Radverkehr.
-  </p>
+
+  <h2>Welche Daten werden erfasst?</h2>
+  <p>Bei jeder Meldung: GPS-Position, Kategorie, Zeitstempel. Optional: Name, Klasse, Verkehrsmittel.</p>
+
+  <h2>Wo werden die Daten gespeichert?</h2>
+  <p><strong>Nur lokal auf deinem Gerät.</strong> Es werden keine Daten an Server übertragen.</p>
+
+  <h2>Wie werden Daten geteilt?</h2>
+  <p>Nur wenn du es willst – per QR-Code an die Lehrkraft.</p>
+
+  <h2>Daten löschen</h2>
+  <p>Jederzeit in der App oder durch Deinstallation.</p>
+
+  <h2>Keine Werbung, kein Tracking</h2>
+  <p>Die App enthält keine Werbung und keine Analyse-Tools.</p>
 </body>
 </html>
